--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>House Heat Loss Predictor</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@hubspot/ui-extensions@^0.9.2/dist/ui-extensions.js"></script>
   </head>
   <body>
     <div id="root"></div>
